--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "docx": "^8.5.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
+    "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13",
     "zod": "^3.23.8"
   },
   "devDependencies": {
